--- a/Movilidad/index.html
+++ b/Movilidad/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="jsonmetro.js"></script>
+    <script src="dataCleaning.js"></script>
 </head>
 <body>
+    <button onclick="clean()">Limpia Datos</button>
+    <div id="txt"></div>
     
 </body>
 </html>
